--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
                 <button id="p2" class="player btn">Player 2</button>
             </div>
         </div>
+        <div class="row">
+            <div class="col col-12 text-center" id="winnerDiv"><h3 id="winner"></h3></div>
+        </div>
     </main>
-    <button id="reset" class="btn">Reset game</button>
+    
 
 </body>
 
