messages to improve ux

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="text-center">
         <h1>Rock, Paper, Scissors</h1>
     </header>
     <main class="container">
         <div class="row">
             <div class="col text-center">
-                <h3>Let's get started!</h3>
-                <p>Choose your player.</p>
+                <h3 id="instructions">Let's get started!</h3>
+                <p id="subinstructions">Choose your player.</p>
             </div>
         </div>
         <div class="row">
